<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="conversation">conversation</string>
    <string name="folder">folder</string>
    <string name="group">group</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_folder">FolderActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="new_message">New Message</string>
    <string name="select_all">Select All</string>
    <string name="unselect">Unselect</string>
    <string name="the_conversation_is_empty">The conversation is empty</string>
    <string name="delete">Delete</string>
    <string name="icon">icon</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="title_activity_conversation_detail">ConversationDetailActivity</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="confirm_to_delete_">Confirm to delete?</string>
    <string name="are_you_sure_to_delele_the_selected_conversations_">Are you sure to delele the selected conversations?</string>
    <string name="progress">Progress</string>
    <string name="deleting">Deleting</string>
    <string name="send">Send</string>
    <string name="please_input_the_message">please input the message</string>
    <string name="address">Address</string>
    <string name="body">Body</string>
    <string name="input_phone_number">input phone number</string>
    <string name="input_message">input message</string>
    <string name="send_success">send success</string>
    <string name="phone_number_and_message_should_not_be_empty">phone number and message should not be empty</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="sent">Sent</string>
    <string name="draft">Draft</string>
    <string name="title_activity_folder_detail">FolderDetailActivity</string>
    <string name="title_activity_sms_detail">SmsDetailActivity</string>

</resources>
